moved to java.net.URI